test/kind/wrong/alias1.kk.out
test/kind/wrong/alias1.kk(6,18): error: Type alias kind/wrong/alias1/id has too few arguments